k8s/chattingo-backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chattingo-backend-deployment
  labels:
    app: chattingo-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chattingo-backend
  template:
    metadata:
      labels:
        app: chattingo-backend
    spec:
      containers:
        - name: chattingo-backend
          image:   routparesh/chattingo-backend:e92861bbd8fa2734e97899fe616c0250d7c49ded
          ports:
            - containerPort: 8080
