k8s/chattingo-db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chattingo-db-deployment
  labels:
    app: chattingo-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chattingo-db
  template:
    metadata:
      labels:
        app: chattingo-db
    spec:
      containers:
        - name: chattingo-db
          image: mysql:8.0
          ports:
            - containerPort: 3306
