k8s/chattingo-frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chattingo-frontend-deployment
  labels:
    app: chattingo-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chattingo-frontend
  template:
    metadata:
      labels:
        app: chattingo-frontend
    spec:
      containers:
        - name: chattingo-frontend
          image:      routparesh/chattingo-frontend:805098dfed53ef8349bc4bab41cf516a6c44007f
          ports:
            - containerPort: 80
