k8s/chattingo-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chattingo-frontend-service
spec:
  selector:
    app: chattingo-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
